<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#009688"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="15dp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/movieReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/release_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/movieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/rating"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/addToFavs"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#86E4DB"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/mark_as_favourite"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/moviePlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/overview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#444444"
            android:textIsSelectable="false"
            android:textSize="14dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailersListView"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#eee"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviewsListView"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            android:layout_height="100dp"/>

    </LinearLayout>
</ScrollView>